# science_of_programming

./: README.md
XML/: .gitignore  inputTree.xml  iterator.h  main.cpp  node.cpp  node.h  outputTree.xml  resource.cpp  resource.h  tree.cpp  tree.h
calculator/: .gitignore  CMakeLists.txt  calc.cpp  calc.h  loader.cpp  loader.h  main.cpp  operations.cpp  operations.h
calculator/plugins/: funccos.cpp  funcdeg.cpp  funcln.cpp  funcsin.cpp  functg.cpp
engine/: Engine.cpp  Engine.h  Subject.h  Wrapper.cpp  Wrapper.h  main.cpp
